# blog

./: .envrc  .gitignore  CLAUDE.md  README.md  hcentner-blog.cabal  package-lock.json  package.json  robots.txt  vitest.config.mjs  wrangler.jsonc
.github/workflows/: test.yml
css/: default.css
nix/modules/flake/: devshell.nix  haskell.nix
posts/: 2025-08-31-graph-eigenvalues.md  2025-09-01-realtime-math-notes.md  2026-02-01-nixos-networkless-update.md
templates/: default.html  footer.html
worker/: auth.js  email.js  index.js  migrate.js  routes.js
worker/pages/: admin.js  forgot-password.js  login.js  members.js  register.js  reset-password.js
worker/scripts/: seed-admin.js
worker/test/: reset-password.test.js
