cabal-version:      2.4
name:               hcentner-blog
version:            0.1.0.0
license:            MIT
copyright:          2025 Harrison Centner
maintainer:         hcentner@umich.edu
author:             Harrison Centner
category:           Web

synopsis:           A blog mostly about software, built with Hakyll
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base
    , data-default
    , directory
    , filepath
    , hakyll
    , mtl
    , optics-core
    , pandoc
    , pandoc-types
    , profunctors
    , relude
    , shower
    , text
    , time

  hs-source-dirs:     src
  default-language:   GHC2021

executable site
  import:         shared
  hs-source-dirs: src
  main-is:        site.hs
